# rust-crates-analytics

./: .gitignore  LICENSE.md  README.md  pyproject.toml  setup.py  setup.sh  update.py  update_duckdb.sh
mcp/: mcp_duckdb_http.py  mcp_duckdb_server.py
scripts/: common.py  create_duckdb.py  ingest_dump.py  ingest_vd_archives.py  load_duckdb.py
transformations/: .gitignore  dbt_project.yml  profiles.yml
transformations/models/: sources.yml
transformations/models/staging/: stg_categories.sql  stg_categories.yml  stg_crate_downloads.sql  stg_crate_downloads.yml  stg_crate_owners.sql  stg_crate_owners.yml  stg_crates.sql  stg_crates.yml  stg_crates_categories.sql  stg_crates_categories.yml  stg_crates_keywords.sql  stg_crates_keywords.yml  stg_default_versions.sql  stg_default_versions.yml  stg_dependencies.sql  stg_dependencies.yml  stg_keywords.sql  stg_keywords.yml  stg_reserved_crate_names.sql  stg_reserved_crate_names.yml  stg_teams.sql  stg_teams.yml  stg_users.sql  stg_users.yml  stg_version_downloads.sql  stg_version_downloads.yml  stg_versions.sql  stg_versions.yml
transformations/tests/: assert_no_crate_named_claude.sql
visualization/: orphan_dashboard.py
